--- a/repair.css
+++ b/repair.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "TT Lakes";
+    font-family: "TT Lakes Regular";
     font-weight: normal;
     font-style: regular;
     src: local("TT Lakes"),
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: "TT Lakes";
+    font-family: "TT Lakes Medium";
     font-weight: medium;
     font-style: normal;
     src: local("TT Lakes"),
@@ -18,7 +18,6 @@ body {
     margin: 0;
     padding: 0;
     width: 320px;
-    font-family: 'TT Lakes', "Arial", sans-serif;
 }
 
 .sm:not(.xs),
@@ -36,6 +35,7 @@ body {
     padding: 16px;
     font-size: 16px;
     line-height: 24px;
+    font-family: 'TT Lakes Regular', "Arial", sans-serif;
     font-weight: normal;
     font-style: regular;
     letter-spacing: -0.2px;
@@ -122,6 +122,7 @@ body {
         font-size: 16px;
         line-height: 24px;
         letter-spacing: -0.2px;
+        font-family: 'TT Lakes Medium', "Arial", sans-serif;
         font-weight: medium;
         font-style: normal;
         color: #1B1C21;
